# cardano-benchmarking

./: .gitignore  .gitmodules  .stylish-haskell.yaml  CODEOWNERS  Makefile  README.md  apply-stylish-haskell.sh  bors.toml  cabal.project  default.nix  release.nix  shell.nix  stack.yaml  static.nix
.buildkite/: check-stylish.sh  full-sync-nightly.yml  installers-nightly.yml  nightly.yml  pipeline.yml
benchmarks/chain-sync/: analyse-logs.sh  benchmark-chain-sync-mainnet-candidate-2.sh  benchmark-chain-sync-mainnet-candidate-3.sh  benchmark-chain-sync-mainnet-candidate.sh  benchmark-chain-sync-mainnet.sh  ci-full-sync.sh  ci.sh  tmux-session.sh
benchmarks/chain-sync/configuration/: log-config-ci.yaml  log-configuration.yaml  mainnet_candidate-config.json  mainnet_candidate-topology.json  mainnet_candidate_2-config.json  mainnet_candidate_2-topology.json  mainnet_candidate_3-config.json  mainnet_candidate_3-topology.json  topology-byron-proxy.yaml
benchmarks/cluster3nodes/: .gitignore  README  README.md  analyse-blocks.sh  benchmark.sh  clean-explorer-db.sh  create-addresses.sh  fund-addresses.sh  genesis-byron.sh  genesis-shelley.sh  genesis.sh  lib.sh  recreate_timeline.sh  run-3node-cluster-rt-view.sh  run-3node-cluster.sh  run-3nodes.sh  run-second-3node-cluster.sh  run_explorer.sh  run_rt_view.sh  run_rt_view_service.sh  run_tx_generator.sh  start.sh  submit_delegation_tx.sh
benchmarks/cluster3nodes/configuration-byron/: configuration-genesis.yaml  configuration-node-0-rt-view.yaml  configuration-node-0.yaml  configuration-node-1-rt-view.yaml  configuration-node-1.yaml  configuration-node-2-rt-view.yaml  configuration-node-2.yaml  configuration-node-3-rt-view.yaml  configuration-node-3.yaml  configuration-node-4-rt-view.yaml  configuration-node-5-rt-view.yaml  configuration-node-6-rt-view.yaml  configuration-rt-view.yaml  parameters  psql-settings.sh  topology-node-1.json  topology-node-3.json  topology-node-4.json  topology-node-6.json
benchmarks/cluster3nodes/configuration-shelley/: configuration-generator.yaml  configuration-node-0-rt-view.yaml  configuration-node-1-rt-view.yaml  (+10 more)
benchmarks/existing-cluster/: .gitignore  convert-faucet-funds-to-txgen-args.sh  get-address-utxos.sh  request-faucet-funds.sh  workload.sh
benchmarks/shelley3pools/: .gitignore  README.md  analyse-leaderships.sh  analyse.sh  benchmark-generic.sh  benchmark.sh  configuration-generator.sh  create-addresses-generic.sh  create-addresses.sh  exgenesis.sh  fund-addresses-generic.sh  fund-addresses.sh  hash_genesis.sh  kill-session.sh  manual-tx-generator.sh  prepare-genesis.sh  prepare_genesis-generic.sh  prepare_genesis.sh  prepare_genesis_byron.sh  prepare_genesis_expenditure.sh  prepare_genesis_shelley_staked.sh  prepare_genesis_staked.sh  report.sh  run-3pools.sh  run-Npools.sh  run-rt-view.sh  run-tx-generator.sh  setup-benchmarking.sh  start-generic.sh  start.sh  submit_delegation_tx.sh  topology-generator.sh  tx-generator-script.json
bm-timeline/: README.md  bm-timeline.cabal
bm-timeline/src/: Adoption.hs  Resources.hs  Time2Block.hs  Timeline.hs
bm-timeline/src/Cardano/BM/: AddToChain.hs  Adopted.hs  CPUticks.hs  Common.hs  Csv.hs  Leader.hs  MemResident.hs  Stats.hs  TxAdopted.hs  TxMempool.hs
cardano-rt-view/: AppImage.md  README.md  cardano-rt-view.cabal  mkapp.sh
cardano-rt-view/app/: cardano-rt-view.hs
cardano-rt-view/resources/: AppRun  cardano-rt-view.desktop  rt-view.yaml  rt-view.yaml0
cardano-rt-view/test/: README.md  rt-view-config.yaml  runTest.sh
cardano-tx-generator/: Readme.md  cardano-tx-generator.cabal
cardano-tx-generator/app/: cardano-tx-generator-byron.hs  cardano-tx-generator.hs
cardano-tx-generator/docs/: tx-submit-using-tx-gen.md
cardano-tx-generator/src/: Main.hs
cardano-tx-generator/src/Cardano/Benchmarking/: CliArgsScript.hs  Command.hs  DSL.hs  GeneratorTx.hs  OuroborosImports.hs  Run.hs  Script.hs  Tracer.hs  Types.hs  Util.hs
cardano-tx-generator/src/Cardano/Benchmarking/GeneratorTx/: Benchmark.hs  Callback.hs  Era.hs  Error.hs  Genesis.hs  LocalProtocolDefinition.hs  NodeToNode.hs  Params.hs  SizedMetadata.hs  Submission.hs  Tx.hs
cardano-tx-generator/src/Cardano/Benchmarking/GeneratorTx/CLI/: Parsers.hs  Run.hs
cardano-tx-generator/src/Cardano/Benchmarking/GeneratorTx/Tx/: Byron.hs
cardano-tx-generator/src/Cardano/Benchmarking/Script/: Action.hs  Aeson.hs  Core.hs  Env.hs  Example.hs  Setters.hs  Store.hs
cardano-tx-generator/test/: Main.hs  Spec.hs  script.json
locli/: locli.cabal
locli/app/: locli.hs
nix/: darwin-release.nix  default.nix  haskell.nix  linux-release.nix  pkgs.nix  scripts.nix  sources.json  stack-shell.nix  svclib.nix  windows-release.nix
nix/nixos/: default.nix  tx-generator-service.nix
scripts/: 00-results-table.sql  01-blocks-per-leader.sql  02-slot-leaders.sql  03-tx-count.sql  04-tps.sql  05-tbps.sql  README.txt  added-to-current-chain.sh  addedblocktoqueue.sh  addedtocurrentchain.sh  adoptedblock.sh  analyse-recvmsgblock.sh  analyse.sh  blocksizes.sh  cabal-inside-nix-shell.sh  common.sh  explorer.MsgBlock.sh  extract_adopted_tx_ids.sh  filter-TraceTxSubmission.sh  filter-slotstats-mempool-insertion-weirdness.sh  generator-logs.sh  grep-cpu.sh  grep-mem.sh  leadershipcheck.sh  lib-cli.sh  lib-formats.sh  lib-loganalysis.sh  lib-nix.sh  lib-node.sh  lib.sh  libconfig.sh  mainnet.sh  mcount.sh  mempooladdedtx.sh  mempoolrejectedtx.sh  msgtypes.sh  node.AddedBlockToQueue.sh  node.AddedToCurrentChain.sh  node.TraceMempoolRejectedTx.sh  nodeisleader.sh  (+20 more)
tx-generator-shelley/: README.md  tx-generator-shelley.cabal
tx-generator-shelley/app/: cardano-tx-generator-shelley.hs
tx-generator-shelley/src/Cardano/Benchmarking/: Test.hs  TxGenerator.hs
tx-generator-shelley/src/Cardano/Benchmarking/TxGenerator/: Error.hs  NodeToNode.hs  Phase1.hs  Producer.hs  Submission.hs  Types.hs  Utils.hs
tx-generator-shelley/src/Cardano/Benchmarking/TxGenerator/CLI/: Parsers.hs  Run.hs
tx-generator-shelley/test/: Main.hs
tx-generator-shelley/test/Cardano/Benchmarking/: MockServer.hs  ReferenceServer.hs
(+76 files in other folders)
