cabal-version:       >=1.10
name:                bm-timeline
version:             0.1.0.0
description:         analyses the output of cluster3nodes benchmarking run
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
author:              IOHK
maintainer:          operations@iohk.io
build-type:          Simple
extra-source-files:  README.md

executable bmtimeline
  main-is:             Timeline.hs 
  other-modules:       Cardano.BM.Common
                     , Cardano.BM.Adopted
                     , Cardano.BM.AddToChain
                     , Cardano.BM.Leader
  -- other-extensions:
  build-depends:       base >=4.12 && <4.14
                     , text
                     , time
                     , unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

  ghc-options:         -Wall -Werror
                       -rtsopts
                       "-with-rtsopts=-T"

  