cabal-version:         >=1.10
name:                  cardano-tx-generator
version:               0.1.0.0
author:                IOHK
maintainer:            operations@iohk.io
license:               Apache-2.0
license-files:
  LICENSE
  NOTICE
build-type:            Simple
extra-source-files:    Readme.md

executable cardano-tx-generator
  hs-source-dirs:      src
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base
  -- hs-source-dirs:
  default-language:    Haskell2010
