name:                  cardano-tx-generator
version:               1.19.1
description:           The transaction generator for cardano node
author:                IOHK
maintainer:            operations@iohk.io
license:               Apache-2.0
license-files:
  LICENSE
  NOTICE
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md
library

  hs-source-dirs:      src
  ghc-options:         -Wextra

  exposed-modules:     Cardano.Benchmarking.GeneratorTx
                       Cardano.Benchmarking.GeneratorTx.Benchmark
                       Cardano.Benchmarking.GeneratorTx.Error
                       Cardano.Benchmarking.GeneratorTx.Era
                       Cardano.Benchmarking.GeneratorTx.Genesis
                       Cardano.Benchmarking.GeneratorTx.NodeToNode
                       Cardano.Benchmarking.GeneratorTx.Tx
                       Cardano.Benchmarking.GeneratorTx.Tx.Byron
                       Cardano.Benchmarking.GeneratorTx.Submission
                       Cardano.Benchmarking.GeneratorTx.CLI.Parsers
                       Cardano.Benchmarking.Run

  other-modules:       Paths_cardano_tx_generator

  build-depends:       aeson
                     , async
                     , attoparsec
                     , base >=4.12 && <5
                     , bytestring
                     , cardano-api
                     , cardano-binary
                     , cardano-cli
                     , cardano-config
                     , cardano-crypto-class
                     , cardano-crypto-wrapper
                     , cardano-ledger
                     , cardano-node
                     , cardano-prelude
                     , contra-tracer
                     , cborg >= 0.2.2 && < 0.3
                     , containers
                     , directory
                     , extra
                     , filepath
                     , formatting
                     , generic-monoid
                     , generics-sop
                     , ghc-prim
                     , http-client
                     , http-types
                     , io-sim-classes
                     , iohk-monitoring
                     , iproute
                     , network
                     , network-mux
                     , optparse-applicative
                     , ouroboros-consensus
                     , ouroboros-consensus-byron
                     , ouroboros-consensus-cardano
                     , ouroboros-consensus-shelley
                     , ouroboros-network
                     , ouroboros-network-framework
                     , random
                     , safe-exceptions
                     , serialise
                     , shelley-spec-ledger
                     , split
                     , stm
                     , text
                     , time
                     , time-compat
                     , tracer-transformers
                     , transformers
                     , transformers-except
                     , unordered-containers
                     , yaml

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Weverything
                       -Wno-implicit-prelude
                       -fno-warn-safe
                       -fno-warn-unsafe
                       -fno-warn-missing-import-lists
                       -Wno-unticked-promoted-constructors
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields
                       -Wcompat

executable cardano-tx-generator
  hs-source-dirs:      app
  main-is:             cardano-tx-generator.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wextra
                       -rtsopts
                       "-with-rtsopts=-T"
  build-depends:       base >=4.12 && <5
                     , cardano-prelude
                     , cardano-tx-generator
                     , optparse-applicative
                     , transformers-except

  default-extensions:  NoImplicitPrelude

test-suite cardano-tx-generator-test
  hs-source-dirs:       test
  main-is:              Main.hs
  type:                 exitcode-stdio-1.0

  build-depends:        base >=4.12 && <5
                      , tasty-hunit
                      , tasty-quickcheck
                      , tasty
                      , heredoc
                      , optparse-applicative
                      , cardano-tx-generator

  default-language:     Haskell2010

  ghc-options:          -Weverything
                        -fno-warn-missing-import-lists
                        -fno-warn-safe
                        -fno-warn-unsafe
                        -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
