name:                  tx-generator-shelley
version:               0.2.0
description:           The transaction generator for shelley
author:                IOHK
maintainer:            operations@iohk.io
license:               Apache-2.0
license-files:
  LICENSE
  NOTICE
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md
library

  hs-source-dirs:      src

  exposed-modules:     Cardano.Benchmarking.TxGenerator
                       Cardano.Benchmarking.TxGenerator.CLI.Parsers
                       Cardano.Benchmarking.TxGenerator.CLI.Run
                       Cardano.Benchmarking.TxGenerator.Error
                       Cardano.Benchmarking.TxGenerator.NodeToNode
                       Cardano.Benchmarking.TxGenerator.Phase1
                       Cardano.Benchmarking.TxGenerator.Producer
                       Cardano.Benchmarking.TxGenerator.Submission
                       Cardano.Benchmarking.TxGenerator.Types
                       Cardano.Benchmarking.TxGenerator.Utils

  other-modules:       Paths_tx_generator_shelley

  build-depends:       aeson
                     , async
                     , attoparsec
                     , base >=4.12 && <5
                     , bytestring
                     , cardano-api
                     , cardano-binary
                     , cardano-cli
                     , cardano-config
                     , cardano-crypto-class
                     , cardano-crypto-wrapper
                     , cardano-ledger
                     , cardano-node
                     , cardano-prelude
                     , cborg >= 0.2.2 && < 0.3
                     , containers
                     , contra-tracer
                     , directory
                     , filepath
                     , io-sim-classes
                     , iohk-monitoring
                     , iproute
                     , network
                     , network-mux
                     , optparse-applicative
                     , ouroboros-consensus
                     , ouroboros-consensus-byron
                     , ouroboros-consensus-shelley
                     , ouroboros-consensus-cardano
                     , ouroboros-network
                     , ouroboros-network-framework
                     , shelley-spec-ledger
                     , serialise
                     , stm
                     , text
                     , time
                     , tracer-transformers
                     , transformers
                     , transformers-except
                     , unordered-containers

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

  ghc-options:         -Wall
                       -fno-warn-safe
                       -fno-warn-unsafe
                       -fno-warn-missing-import-lists
                       -Wno-unticked-promoted-constructors
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields
                       -Wcompat

executable tx-generator-shelley
  hs-source-dirs:      app
  main-is:             cardano-tx-generator-shelley.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -rtsopts
  build-depends:       base >=4.12 && <5
                     , cardano-prelude
                     , tx-generator-shelley
                     , optparse-applicative
                     , transformers-except

test-suite tx-generator-test
  hs-source-dirs:       test
  main-is:              Spec.hs
  type:                 exitcode-stdio-1.0

  build-depends:        base >=4.12 && <5
                      , cardano-prelude

  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude

  ghc-options:          -Wall
                        -fno-warn-missing-import-lists
                        -fno-warn-safe
                        -fno-warn-unsafe
                        -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
